Add PlatformDependent0$7 coverage test