@@ -19,7 +19,8 @@ tasks.withType(Test).configureEach {
     jvmArgs += [
         "--add-opens=java.base/java.lang=ALL-UNNAMED",
         "--add-opens=java.base/java.nio=ALL-UNNAMED",
-        "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
+        "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+        "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED"
     ]
 }
 
@@ -37,7 +38,8 @@ graalvmNative {
             buildArgs.addAll([
                 '--add-opens=java.base/java.lang=ALL-UNNAMED',
                 '--add-opens=java.base/java.nio=ALL-UNNAMED',
-                '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED'
+                '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED',
+                '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED'
             ])
         }
     }
